<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_notes_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_notes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_notes_dialog_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lines="3">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="Cancel" />

            <Button
                android:id="@+id/add_notes_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="Add" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>